# wax

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  index.json  package.json  playwright.config.mjs  renovate.json
.claude-plugin/: marketplace.json  plugin.json
engine/: Cargo.toml
engine/.config/: nextest.toml
engine/crates/wax-cli/: Cargo.toml
engine/crates/wax-cli/src/: cli.rs  lib.rs  main.rs  progress.rs  testing.rs
engine/crates/wax-cli/src/commands/: diagnostic_output.rs  init.rs  language.rs  registry.rs  scan.rs  state_path.rs  sync.rs  uninstall.rs  validate.rs
engine/crates/wax-cli/tests/: alpha_smoke.rs  init_command.rs  init_interactive.rs  progress_output.rs  registry_discover_command.rs  registry_memory_commands.rs  scan_command.rs  scan_ephemeral.rs  sync_command.rs  validate_command.rs  wax_binary.rs
engine/crates/wax-contract/: Cargo.toml
engine/crates/wax-contract/schemas/: scan-facts.schema.json  waxrc.schema.json
engine/crates/wax-contract/src/: lib.rs
engine/crates/wax-contract/tests/: schema_roundtrip.rs
engine/crates/wax-core/: Cargo.toml
engine/crates/wax-core/src/: adoption_merge.rs  atomic_file.rs  auto_install.rs  config.rs  defaults.rs  global_state.rs  install.rs  lib.rs  paths.rs  process_control.rs  progress.rs  registry.rs  registry_discovery.rs  registry_lock.rs  registry_memory.rs  registry_source.rs  subprocess_discover.rs  subprocess_exchange.rs  subprocess_lang.rs  sync.rs  token_inference.rs  validate.rs
engine/crates/wax-core/src/config/: lockfile.rs  repo_files.rs  waxrc.rs
engine/crates/wax-core/tests/: auto_install_policy.rs  config_v2.rs  global_paths_state.rs  install_language.rs  lockfile_load.rs  registry_discovery.rs  registry_discovery_paths.rs  registry_source.rs  repo_files.rs  scan_auto_install.rs  scan_concurrency.rs  scan_output.rs  scan_resolve.rs  subprocess_discover.rs  subprocess_lang.rs  subprocess_protocol.rs  validate_repo.rs  waxrc_load.rs
engine/crates/wax-lang-api/: Cargo.toml  build.rs
engine/crates/wax-lang-api/src/: build_info.rs  discover.rs  import_resolution.rs  lib.rs  protocol.rs  root_patterns.rs  server.rs  timing.rs  token_registry.rs
engine/crates/wax-lang-api/tests/: discover_protocol.rs  server.rs  token_registry.rs  wire_protocol.rs
engine/crates/wax-lang-basic/: Cargo.toml
engine/crates/wax-lang-basic/src/: lib.rs  line_scan.rs
engine/crates/wax-lang-basic/tests/: config_validation.rs  golden_small.rs  stdio_cli.rs
engine/crates/wax-lang-basic/tests/fixtures/invalid-registry/design-system/: registry.json
engine/crates/wax-lang-basic/tests/fixtures/small/: golden.json
engine/crates/wax-lang-basic/tests/fixtures/small/app/src/: FalsePositives.src  Sample.src
engine/crates/wax-lang-compose/: Cargo.toml
engine/crates/wax-lang-compose/src/: discover.rs  kotlin_ast.rs  kotlin_recovery.rs  lib.rs  reference_scan.rs  tree_sitter_scan.rs
engine/crates/wax-lang-compose/tests/: config_validation.rs  golden_small.rs  registry_discover.rs  stdio_cli.rs
engine/crates/wax-lang-compose/tests/fixtures/slot/design-system/: registry.json
engine/crates/wax-lang-compose/tests/fixtures/small/: golden.json
engine/crates/wax-lang-compose/tests/fixtures/small/alt-design-system/: registry.json
engine/crates/wax-lang-compose/tests/fixtures/small/design-system/: registry.json
engine/crates/wax-lang-compose/tests/fixtures/wrapper/design-system/: registry.json
engine/crates/wax-lang-react/: Cargo.toml  build.rs
engine/crates/wax-lang-react/src/: component_detect.rs  component_scope.rs  config.rs  diagnostics.rs  discover.rs  extract.rs  facts.rs  files.rs  lib.rs  module_graph.rs  registry.rs  style_extract.rs  swc_parse.rs  token_extract.rs
engine/crates/wax-lang-react/tests/: config_validation.rs  golden_small.rs  registry_discover.rs  stdio_cli.rs
engine/crates/wax-lang-react/tests/fixtures/discover/design-system/: package.json
engine/crates/wax-lang-react/tests/fixtures/discover/design-system/src/: components.tsx  default-memo.tsx  default-react-memo.tsx  index.ts
engine/crates/wax-lang-react/tests/fixtures/small/: golden.json
engine/crates/wax-lang-react/tests/fixtures/small/design-system/: registry.json
engine/crates/wax-lang-react/tests/fixtures/small/src/: Extended.tsx  FalsePositives.tsx  Sample.tsx
engine/crates/wax-lang-react/tests/fixtures/small/src/ds/: TextField.tsx  index.ts
engine/crates/wax-lang-react/tests/fixtures/wrapper/src/: Wrapper.tsx
engine/crates/wax-lang-react/tests/fixtures/wrapper/src/ds/: Tier.tsx  index.ts
engine/crates/wax-lang-swift/: Cargo.toml
engine/crates/wax-lang-swift/src/: component_detect.rs  discover.rs  lib.rs  swift_ast.rs  tree_sitter_scan.rs
engine/crates/wax-lang-swift/tests/: config_validation.rs  golden_small.rs  grammar_gaps.rs  registry_discover.rs  stdio_cli.rs
engine/crates/wax-lang-swift/tests/fixtures/discover/broken/Sources/: Broken.swift
engine/crates/wax-lang-swift/tests/fixtures/discover/design-system/Sources/: DuplicateComponents.swift
engine/crates/wax-lang-swift/tests/fixtures/small/: golden.json
engine/crates/wax-lang-swift/tests/fixtures/small/alt-design-system/: registry.json
engine/crates/wax-lang-swift/tests/fixtures/small/design-system/: registry.json
engine/fixtures/config/: example.waxrc  invalid-language-id.waxrc  malformed.wax.lock.json  malformed.waxrc  minimal-v1-no-registries.wax.lock.json  minimal.wax.lock.json  minimal.waxrc  missing-language-enabled.waxrc  missing-language-id.waxrc  missing-languages.wax.lock.json  missing-languages.waxrc  multiple-languages.waxrc  unknown-engine-field.waxrc  unknown-root-field.waxrc  unsupported-schema-missing-v1-fields.wax.lock.json  unsupported-schema.wax.lock.json  unsupported-schema.waxrc  with-adoption.waxrc  with-extra.waxrc  with-malformed-registry-and-legacy.waxrc  with-registry-object.waxrc  with-registry-string.waxrc  with-unsupported-adoption.waxrc
engine/fixtures/registry/: alpha-index.json  official-manifest.json
engine/fixtures/smoke/compose/repo/design-system/: registry.json
(+153 files in other folders)
