[workspace]
resolver = "3"
members = [
    "crates/wax-contract",
    "crates/wax-core",
    "crates/wax-cli",
    "crates/wax-lang-api",
    "crates/wax-lang-basic",
    "crates/wax-lang-compose",
    "crates/wax-lang-react",
]

[workspace.package]
edition = "2024"
version = "0.0.0-snapshot"

[workspace.metadata.release]
artifact_targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
]
alpha_index_binaries = ["wax", "wax-lang-compose", "wax-lang-basic"]
contributor_only_binaries = ["wax-lang-react"]
build_script = "../scripts/build-release.sh"
