[workspace]
resolver = "3"
members = [
    "crates/wax-contract",
    "crates/wax-core",
    "crates/wax-cli",
    "crates/wax-lang-api",
    "crates/wax-lang-basic",
    "crates/wax-lang-compose",
    "crates/wax-lang-react",
    "crates/wax-lang-swift",
]

[workspace.package]
edition = "2024"
version = "0.0.0-snapshot"

[workspace.dependencies]
swc_common = "23.0.1"
swc_ecma_ast = "25.0.0"
swc_ecma_parser = "41.0.0"
swc_ecma_visit = "25.0.0"

[workspace.metadata.release]
artifact_targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
]
alpha_index_binaries = ["wax", "wax-lang-compose", "wax-lang-basic", "wax-lang-react", "wax-lang-swift"]
contributor_only_binaries = []
build_script = "../scripts/build-release.sh"

[workspace.lints.rust]
future-incompatible = "deny"
nonstandard-style = "deny"
unsafe-code = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
redundant_clone = "deny"
needless_collect = "deny"
unnecessary_wraps = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
