[package]
name = "wax-contract"
version.workspace = true
edition.workspace = true
description = "Normalized scan facts exchanged between wax language packs and the engine"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde", "serde-well-known"] }

[dev-dependencies]
jsonschema = { version = "0.47.0", default-features = false }
