[package]
name = "wax-core"
version = "0.0.0"
edition.workspace = true
description = "Core repository configuration loading for the wax engine"

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["parsing", "serde", "serde-well-known"] }
wax-contract = { path = "../wax-contract" }
wax-lang-api = { path = "../wax-lang-api" }

[dev-dependencies]
time = { version = "0.3", features = ["macros"] }
