[package]
name = "wax-core"
version.workspace = true
edition.workspace = true
description = "Core repository configuration loading for the wax engine"

[dependencies]
flate2 = "1"
libc = "0.2"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tar = "0.4"
thiserror = "2"
time = { version = "0.3", features = ["parsing", "serde", "serde-well-known"] }
wax-contract = { path = "../wax-contract" }
wax-lang-api = { path = "../wax-lang-api" }
wax-lang-compose = { path = "../wax-lang-compose" }

[dev-dependencies]
flate2 = "1"
sha2 = "0.11"
tar = "0.4"
time = { version = "0.3", features = ["macros"] }
