[package]
name = "wax-lang-api"
version = "0.0.0"
edition.workspace = true
description = "Language pack API and wire protocol contracts for the wax engine"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
wax-contract = { path = "../wax-contract" }

[dev-dependencies]
time = { version = "0.3", features = ["macros"] }
