[package]
name = "wax-lang-basic"
version.workspace = true
edition.workspace = true
description = "Generic text line-scanner language pack for the wax engine"

[[bin]]
name = "wax-lang-basic"
path = "src/bin/wax-lang-basic.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde", "serde-well-known"] }
wax-contract = { path = "../wax-contract" }
wax-lang-api = { path = "../wax-lang-api" }
