[package]
name = "wax-lang-react"
version.workspace = true
edition.workspace = true
description = "React language pack for the wax engine"

[[bin]]
name = "wax-lang-react"
path = "src/bin/wax-lang-react.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde", "serde-well-known"] }
wax-contract = { path = "../wax-contract" }
wax-lang-api = { path = "../wax-lang-api" }

[dev-dependencies]
tempfile = "3"
