[package]
name = "wax-lang-swift"
version.workspace = true
edition.workspace = true
description = "SwiftUI language pack for the wax engine"
build = "build.rs"

[[bin]]
name = "wax-lang-swift"
path = "src/bin/wax-lang-swift.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde", "serde-well-known"] }
tree-sitter = "0.22"
tree-sitter-swift = "0.7.3"
wax-contract = { path = "../wax-contract" }
wax-lang-api = { path = "../wax-lang-api" }

[build-dependencies]
toml = "0.9"

[dev-dependencies]
tempfile = "3"
